[B]Retrospect v5.3.2+matrix.1 - Changelog - 2021-05-02[/B]

Minor issues fixed with Up Next integration and Kodi Leia.

[B]Framework related[/B]
* Fixed: Filtering of Geo and paid items (Fixes #1511).
* Changed: Simplified the playback of items.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Added: Multi-stream SVT videos with extra speech options (only available in Sweden).
* Fixed: RTV Utrecht item listing.