@@ -12,3 +12,4 @@ _None_
 [B]Channel related[/B]
 * Added: Multi-stream SVT videos with extra speech options (only available in Sweden).
 * Fixed: RTV Utrecht item listing.
+* Fixed: Omroep Zeeland video playback.
